--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
-  "name": "webapp",
+  "dependencies": {
+    "date-utils": "^1.2.21",
+    "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.3",
+    "mysql": "^2.18.1",
+    "pg": "^8.7.3"
+  },
+  "name": "a",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {},
+  "keywords": [],
+  "description": ""
 }
