--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "name": "a",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "a.js",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
