--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "name": "a",
   "version": "1.0.0",
-  "main": "a.js",
+  "main": "a.ejs",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,5 +17,6 @@
   "author": "",
   "license": "ISC",
   "keywords": [],
+  "devDependencies": {},
   "description": ""
 }
