--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "17.x"
+  },
   "author": "",
   "license": "ISC",
   "keywords": [],
